// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetails creation form 1`] = `
<React.Fragment>
  <PageTitle
    title="New campaign"
  />
  <Form
    className="e2e-campaign-form"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <nav
      aria-label="breadcrumb"
      className="mb-2"
    >
      <ol
        className="breadcrumb"
      >
        <li
          className="breadcrumb-item"
        >
          <AnchorLink
            className="text-decoration-none"
            to="/campaigns"
          >
            Campaigns
          </AnchorLink>
        </li>
        <li
          aria-current="page"
          className="breadcrumb-item active"
        >
          New
        </li>
      </ol>
    </nav>
    <header
      className="d-flex mb-2"
    >
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      />
    </header>
    <NewCampaignForm
      allowPreview={false}
      disabled={false}
      isLightTheme={true}
      isLoadingPreview={false}
      onChange={[Function]}
      onPreviewClick={[Function]}
      previewRefreshNeeded={false}
      value={
        Object {
          "description": "",
          "name": "",
          "plan": undefined,
        }
      }
    />
  </Form>
</React.Fragment>
`;

exports[`CampaignDetails editing existing 1`] = `
Array [
  <form
    className="e2e-campaign-form "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <nav
      aria-label="breadcrumb"
      className="mb-2"
    >
      <ol
        className="breadcrumb"
      >
        <li
          className="breadcrumb-item"
        >
          <a
            className="text-decoration-none"
            href="/campaigns"
          >
            Campaigns
          </a>
        </li>
        <li
          aria-current="page"
          className="breadcrumb-item active"
        >
          New
        </li>
      </ol>
    </nav>
    <header
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      />
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      />
    </header>
    <header
      className="d-flex align-items-center mb-2"
    >
      <span
        className="campaign-status-badge badge mr-2 badge-success"
      >
        <CampaignsIcon
          className="icon-inline mr-1"
        />
         
        Open
      </span>
      <div
        className="flex-grow-1"
      />
      <button
        className="btn btn-primary mr-1"
        disabled={false}
        type="submit"
      >
        Save
      </button>
      <button
        className="btn btn-secondary"
        disabled={false}
        type="reset"
      >
        Cancel
      </button>
    </header>
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        <strong>
           
          alice
        </strong>
         
        started 
        <span
          className="timestamp"
          data-tooltip="2020-01-01"
        >
          in almost 14 years
        </span>
      </div>
      <div
        className="card-body"
      >
        <div
          className="markdown"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>d</p>
",
            }
          }
        />
      </div>
    </div>
  </form>,
  "CampaignStatus(state=PROCESSING)",
  <h3>
    Progress
  </h3>,
  <div
    className="alert alert-info"
  >
    Burndown chart will be shown when there is more than 1 day of data.
  </div>,
  <div
    className="tabs mt-3"
  >
    <div
      className="tab-bar "
    >
      <button
        className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
        data-e2e-tab="diff"
        onClick={[Function]}
        type="button"
      >
        <span
          className="e2e-campaign-diff-tab"
        >
          Diff 
          <span
            className="text-success"
          >
            +
            0
          </span>
           
          <span
            className="text-danger"
          >
            -
            0
          </span>
        </span>
      </button>
      <button
        className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
        data-e2e-tab="changesets"
        onClick={[Function]}
        type="button"
      >
        <span
          className="e2e-campaign-changesets-tab"
        >
          Changesets
           
          <span
            className="badge badge-secondary badge-pill"
          >
            2
          </span>
        </span>
      </button>
    </div>
    <div
      className="mt-3"
    />
  </div>,
]
`;

exports[`CampaignDetails viewing existing 1`] = `
Array [
  <form
    className="e2e-campaign-form "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <nav
      aria-label="breadcrumb"
      className="mb-2"
    >
      <ol
        className="breadcrumb"
      >
        <li
          className="breadcrumb-item"
        >
          <a
            className="text-decoration-none"
            href="/campaigns"
          >
            Campaigns
          </a>
        </li>
        <li
          aria-current="page"
          className="breadcrumb-item active"
        >
          New
        </li>
      </ol>
    </nav>
    <header
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      />
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      />
    </header>
    <header
      className="d-flex align-items-center mb-2"
    >
      <span
        className="campaign-status-badge badge mr-2 badge-success"
      >
        <CampaignsIcon
          className="icon-inline mr-1"
        />
         
        Open
      </span>
      <div
        className="flex-grow-1"
      />
      <button
        className="btn btn-secondary mr-1"
        disabled={false}
        id="e2e-campaign-edit"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
      <details
        className="campaign-details__details"
      >
        <summary>
          <span
            className="btn btn-secondary mr-1 dropdown-toggle"
          >
            Close
          </span>
        </summary>
        <div
          className="position-absolute campaign-details__details-menu"
        >
          <div
            className="card mt-1"
          >
            <div
              className="card-body"
            >
              <p>
                Close campaign 
                <b />
                ?
              </p>
              <div
                className="form-group"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="checkbox"
                />
                 
                Close all 
                2
                 
                changesets
                 on code hosts
              </div>
              <button
                className="btn mr-1 btn-secondary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Close
              </button>
            </div>
          </div>
        </div>
      </details>
      <details
        className="campaign-details__details"
      >
        <summary>
          <span
            className="btn btn-danger dropdown-toggle"
          >
            Delete
          </span>
        </summary>
        <div
          className="position-absolute campaign-details__details-menu"
        >
          <div
            className="card mt-1"
          >
            <div
              className="card-body"
            >
              <p>
                Delete campaign 
                <b />
                ?
              </p>
              <div
                className="form-group"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="checkbox"
                />
                 
                Close all 
                2
                 
                changesets
                 on code hosts
              </div>
              <button
                className="btn mr-1 btn-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </details>
    </header>
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        <strong>
           
          alice
        </strong>
         
        started 
        <span
          className="timestamp"
          data-tooltip="2020-01-01"
        >
          in almost 14 years
        </span>
      </div>
      <div
        className="card-body"
      >
        <div
          className="markdown"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>d</p>
",
            }
          }
        />
      </div>
    </div>
  </form>,
  "CampaignStatus(state=PROCESSING)",
  <h3>
    Progress
  </h3>,
  <div
    className="alert alert-info"
  >
    Burndown chart will be shown when there is more than 1 day of data.
  </div>,
  <div
    className="tabs mt-3"
  >
    <div
      className="tab-bar "
    >
      <button
        className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--active tab-bar__tab--h5like"
        data-e2e-tab="diff"
        onClick={[Function]}
        type="button"
      >
        <span
          className="e2e-campaign-diff-tab"
        >
          Diff 
          <span
            className="text-success"
          >
            +
            0
          </span>
           
          <span
            className="text-danger"
          >
            -
            0
          </span>
        </span>
      </button>
      <button
        className="btn btn-link btn-sm tab-bar__tab tab-bar__tab--flex-grow tab-bar__tab--inactive tab-bar__tab--h5like"
        data-e2e-tab="changesets"
        onClick={[Function]}
        type="button"
      >
        <span
          className="e2e-campaign-changesets-tab"
        >
          Changesets
           
          <span
            className="badge badge-secondary badge-pill"
          >
            2
          </span>
        </span>
      </button>
    </div>
    <div
      className="mt-3"
    />
  </div>,
]
`;
